add: get all and find by Id travel
