# openapi.json
@@ -245,6 +245,84 @@
         "tags": [
           "travel-packages"
         ]
+      },
+      "get": {
+        "operationId": "TravelPackageController_findAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Lista de pacotes de viagem retornada com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": [
+                    {
+                      "id": "1675938274892",
+                      "name": "Praia de Maragogi",
+                      "price": 1499.99,
+                      "description": "Uma incrível viagem para as praias paradisíacas de Maragogi...",
+                      "imageUrl": "https://example.com/images/maragogi.jpg",
+                      "pdfUrl": "https://example.com/pdf/maragogi-itinerary.pdf",
+                      "maxPeople": 20,
+                      "created_at": "2024-02-23T10:00:00.000Z",
+                      "updated_at": "2024-02-23T10:00:00.000Z"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "summary": "Lista todos os pacotes de viagem",
+        "tags": [
+          "travel-packages"
+        ]
+      }
+    },
+    "/travel-packages/{id}": {
+      "get": {
+        "operationId": "TravelPackageController_findById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "ID do pacote de viagem",
+            "schema": {
+              "example": "1675938274892",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pacote de viagem encontrado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "id": "1675938274892",
+                    "name": "Praia de Maragogi",
+                    "price": 1499.99,
+                    "description": "Uma incrível viagem para as praias paradisíacas de Maragogi...",
+                    "imageUrl": "https://example.com/images/maragogi.jpg",
+                    "pdfUrl": "https://example.com/pdf/maragogi-itinerary.pdf",
+                    "maxPeople": 20,
+                    "created_at": "2024-02-23T10:00:00.000Z",
+                    "updated_at": "2024-02-23T10:00:00.000Z"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Pacote de viagem não encontrado"
+          }
+        },
+        "summary": "Busca um pacote de viagem pelo ID",
+        "tags": [
+          "travel-packages"
+        ]
       }
     }
   },
